Ticket #28604: Added declaration of missing commit message property.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -2664,7 +2664,7 @@ com.top_logic.layout.component.UpdateCommandHandler.tooltip = Der <i>Update-Befe
 com.top_logic.layout.component.WithCloseDialog.closeDialog = Dialog schließen
 com.top_logic.layout.component.WithCloseDialog.closeDialog.tooltip = Ob der Dialog geschlossen werden soll, in dem die Komponente angezeigt wird, auf die dieser Handler wirkt. <p> Wenn die Komponente des Handlers nicht in einem Dialog angezeigt wird, hat diese Einstellung keine Wirkung. </p>
 com.top_logic.layout.component.WithCommitMessage.commitMessage = Commit-Nachricht
-com.top_logic.layout.component.WithCommitMessage.commitMessage.tooltip = Die Nachricht, mit der die durchgeführte Änderung annotiert wird. <p> Wenn sie nicht festgelegt ist, wird eine Standardübertragungsnachricht aus der Bezeichnung des Befehls und dem Zielmodell abgeleitet. </p> <p> Eine Nachricht kann den Platzhalter{0}" enthalten, der durch die Bezeichnung des Zielmodells ersetzt wird. </p>
+com.top_logic.layout.component.WithCommitMessage.commitMessage.tooltip = Die Nachricht, mit der die durchgeführte Änderung annotiert wird. <p> Wenn sie nicht festgelegt ist, wird eine Standardübertragungsnachricht aus der Bezeichnung des Befehls und dem Zielmodell abgeleitet. </p> <p> Eine Nachricht kann den Platzhalter "{0}" enthalten, der durch die Bezeichnung des Zielmodells ersetzt wird. </p>
 com.top_logic.layout.component.configuration.AbstractCommandModelConfiguration = Konfiguration des Befehlsmodells
 com.top_logic.layout.component.configuration.AbstractCommandModelConfiguration.Config.commandArguments = Kommando-Argumente
 com.top_logic.layout.component.configuration.AbstractCommandModelConfiguration.Config.commandArguments.tooltip = Statische Argumente für den Befehl.
@@ -5797,7 +5797,7 @@ com.top_logic.layout.table.export.ExcelExportHandler = Excel-Export-Handler
 com.top_logic.layout.table.export.ExcelExportHandler.tooltip = Handler für die Erstellung von Excel-Berichten aus <i>Tabellendaten</i>.
 com.top_logic.layout.table.export.ModelDownloadName = Dateiname (modellbasiert)
 com.top_logic.layout.table.export.ModelDownloadName.Config.downloadNameTemplate = Vorlage für Downloadnamen
-com.top_logic.layout.table.export.ModelDownloadName.Config.downloadNameTemplate.tooltip = Vorlage für den Download-Namen, die einen Platzhalter{0}" enthält, der mit dem Modellnamen gefüllt wird.
+com.top_logic.layout.table.export.ModelDownloadName.Config.downloadNameTemplate.tooltip = Vorlage für den Download-Namen, die einen Platzhalter "{0}" enthält, der mit dem Modellnamen gefüllt wird.
 com.top_logic.layout.table.export.ModelDownloadName.Config.model = Modell
 com.top_logic.layout.table.export.ModelDownloadName.Config.model.tooltip = Der <i>Komponenten-Kanal</i> zum Abrufen des Modells, dessen Bezeichnung für den dynamischen Teil des Dateinamens verwendet wird. <p> Ist er nicht gesetzt, wird stattdessen das Zielmodell des Exportbefehls verwendet. Dies ist normalerweise das Modell der zugrunde liegenden Komponente. </p>
 com.top_logic.layout.table.export.ModelDownloadName.tooltip = Die Berechnung <i>des Download-Namens</i> generiert Dateinamen, bei denen die Bezeichnung des konfigurierten Modells übergeben wird, um den Platzhalter '{0}' in res-key zu verwenden.
