Ticket #28727: Generate I18N from JavaDoc.

--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -6309,6 +6309,14 @@ com.top_logic.layout.tree.component.TreeComponent.Config.treeRenderer.tooltip = 
 com.top_logic.layout.tree.component.TreeComponent.TreeComponentRenderer.Config.cssClass = Css class
 com.top_logic.layout.tree.component.TreeComponent.TreeComponentRenderer.Config.cssClass.tooltip = Additional CSS class to add to the tree element.
 com.top_logic.layout.tree.component.TreeComponent.tooltip = Component for displaying and working with trees. <p> This class needs a <i>tree model builder</i> which defines the business tree to display. This component than translates this tree into a <i>tree UI model</i> and holds it in sync by reacting on model change, delete, and create events. </p>
+com.top_logic.layout.tree.component.TreeModelBuilderBase = Tree model builder base
+com.top_logic.layout.tree.component.TreeModelBuilderBase.Config.finite = Finite
+com.top_logic.layout.tree.component.TreeModelBuilderBase.Config.finite.tooltip = Whether it is possible to expand all nodes. <p> This option might only be enabled, if the tree is guaranteed to be finite. </p>
+com.top_logic.layout.tree.component.TreeModelBuilderBase.tooltip = Base class for implementing <i>tree model builder</i> usable in in-app layout configurations.
+com.top_logic.layout.tree.component.WithTreeModelBuilder.modelBuilder = Tree builder
+com.top_logic.layout.tree.component.WithTreeModelBuilder.modelBuilder.tooltip = Algorithm creating the tree structure to be displayed.
+com.top_logic.layout.tree.component.WithTreeModelBuilder.tree-semantics-supported = Tree semantics supported
+com.top_logic.layout.tree.component.WithTreeModelBuilder.tree-semantics-supported.tooltip = Whether a corresponding selection model can use tree-semantics allowing whole sub-trees to be selected.
 com.top_logic.layout.tree.dnd.TreeDropEvent$Position = Position
 com.top_logic.layout.tree.dnd.TreeDropEvent$Position.tooltip = Specifier where a drop event happened relative to a reference node in a tree.
 com.top_logic.layout.tree.dnd.TreeDropEvent.Position.ABOVE = Above
