Ticket #28727: Generate I18N from JavaDoc.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -6385,6 +6385,14 @@ com.top_logic.layout.tree.component.TreeComponent.Config.treeRenderer.tooltip = 
 com.top_logic.layout.tree.component.TreeComponent.TreeComponentRenderer.Config.cssClass = Css-Klasse
 com.top_logic.layout.tree.component.TreeComponent.TreeComponentRenderer.Config.cssClass.tooltip = Zusätzliche CSS-Klasse zum Hinzufügen zum Baumelement.
 com.top_logic.layout.tree.component.TreeComponent.tooltip = Komponente für die Anzeige von und die Arbeit mit Bäumen. <p> Diese Klasse benötigt einen <i>Tree Model Builder</i>, der den anzuzeigenden Baum von Fachobjekten definiert. Diese Komponente übersetzt dann diesen Baum in ein <i>Baum-UI-Modell</i> und hält es synchron, indem sie auf Modelländerungs-, Lösch- und Erstellungsereignisse reagiert. </p>
+com.top_logic.layout.tree.component.TreeModelBuilderBase = Baummodell Erbauer Basis
+com.top_logic.layout.tree.component.TreeModelBuilderBase.Config.finite = Endlich
+com.top_logic.layout.tree.component.TreeModelBuilderBase.Config.finite.tooltip = Ob es möglich ist, alle Knoten zu erweitern. <p> Diese Option kann nur aktiviert werden, wenn der Baum garantiert endlich ist. </p>
+com.top_logic.layout.tree.component.TreeModelBuilderBase.tooltip = Basisklasse für die Implementierung des <i>Erbauers von Baummodellen</i>, die in In-App-Layout-Konfigurationen verwendet werden können.
+com.top_logic.layout.tree.component.WithTreeModelBuilder.modelBuilder = Erbauer von Bäumen
+com.top_logic.layout.tree.component.WithTreeModelBuilder.modelBuilder.tooltip = Algorithmus zur Erstellung der anzuzeigenden Baumstruktur.
+com.top_logic.layout.tree.component.WithTreeModelBuilder.tree-semantics-supported = Unterstützte Baumsemantik
+com.top_logic.layout.tree.component.WithTreeModelBuilder.tree-semantics-supported.tooltip = Ob ein entsprechendes Auswahlmodell eine Baumsemantik verwenden kann, die die Auswahl ganzer Teilbäume ermöglicht.
 com.top_logic.layout.tree.dnd.TreeDropEvent$Position = Standpunkt
 com.top_logic.layout.tree.dnd.TreeDropEvent$Position.tooltip = Spezifizieren Sie, wo ein Fallereignis relativ zu einem Referenzknoten in einem Baum aufgetreten ist.
 com.top_logic.layout.tree.dnd.TreeDropEvent.Position.ABOVE = Oben
