--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/ElementMessages_de.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/ElementMessages_de.properties
@@ -386,7 +386,7 @@ com.top_logic.element.meta.expr.internal.StructureContext = Kontextobjekt
 com.top_logic.element.meta.expr.internal.TypeOf = Typumwandlung
 com.top_logic.element.meta.expr.internal.TypeOf.Config.module = Modul
 com.top_logic.element.meta.expr.internal.TypeOf.Config.type-name = Typ
-com.top_logic.element.meta.form.fieldprovider.TLDetailDialog.defaultI18n = Dialog title
+com.top_logic.element.meta.form.fieldprovider.TLDetailDialog.defaultI18n = Dialog Titel
 com.top_logic.element.meta.form.overlay.TLFormObjectNaming$Name = {edited-object ? {editiertes Objekt '{edited-object}'} : {neues Objekt '{domain}'}}
 com.top_logic.element.meta.kbbased.NamedConstraint = Vordefinierte Vorschläge
 com.top_logic.element.meta.kbbased.NamedConstraint$Config = Vordefinierte Vorschläge{name ? { "{name}"}}
