Ticket #28753: Added scripting for opening detail dialog.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -1120,6 +1120,12 @@ com.top_logic.element.meta.form.fieldprovider.ComplexFieldProvider.Config.option
 com.top_logic.element.meta.form.fieldprovider.ComplexFieldProvider.Config.select-dialog = Dialog auswählen
 com.top_logic.element.meta.form.fieldprovider.ComplexFieldProvider.Config.select-dialog.tooltip = Konfiguration für den Auswahldialog (falls er verwendet wird) des <i>Ergebnisauswahlfeldes</i>.
 com.top_logic.element.meta.form.fieldprovider.ComplexFieldProvider.tooltip = <i>Feldanbieter</i> für <i>strukturierte Typteile</i> eines benutzerdefinierten Datentyps.
+com.top_logic.element.meta.form.fieldprovider.CompositionFieldProvider$OpenDetailsCommand$Naming$Name = Details von '{row}'
+com.top_logic.element.meta.form.fieldprovider.CompositionFieldProvider$OpenDetailsCommand$Naming$Name.tooltip = <i>Modellname</i>, der einen <i>Befehl zum Öffnen von Details</i> identifiziert.
+com.top_logic.element.meta.form.fieldprovider.CompositionFieldProvider.OpenDetailsCommand.Naming.Name.row = Reihe
+com.top_logic.element.meta.form.fieldprovider.CompositionFieldProvider.OpenDetailsCommand.Naming.Name.row.tooltip = Name der Zeile, für die der Detaildialog geöffnet wird.
+com.top_logic.element.meta.form.fieldprovider.CompositionFieldProvider.OpenDetailsCommand.Naming.Name.table = Tabelle
+com.top_logic.element.meta.form.fieldprovider.CompositionFieldProvider.OpenDetailsCommand.Naming.Name.table.tooltip = Name der angezeigten Tabelle.
 com.top_logic.element.meta.form.fieldprovider.ConfigurationFieldProvider$ConfigEditContext = Kontext des Konfigurationseditors
 com.top_logic.element.meta.form.fieldprovider.ConfigurationFieldProvider$ConfigEditContext.tooltip = Kontext für die Bearbeitung von <i>Konfigurationselementwerten</i> in Modellattributen. <p> Wenn ein Editor für ein <i>Konfigurationselement</i> erstellt wird, das in einer Eigenschaft eines persistenten Objekts gespeichert ist, wird es in einen umgebenden <i>Konfigurations-Editierkontext</i> eingefügt, dessen <i>Basismodell</i> auf die bearbeitete Instanz gesetzt wird. Dies ermöglicht den Zugriff auf diesen Kontext z.B. von Berechnungen, die für Eigenschaften der bearbeiteten Konfiguration deklariert wurden. Um diese Funktion zu nutzen, muss der bearbeitete <i>Konfigurationselementtyp</i> den <i>Konfigurationsteil</i> erweitern und den <i>Konfigurationsbearbeitungskontext</i> als seinen <i>Containereigenschaftstyp</i> deklarieren. </p>
 com.top_logic.element.meta.form.fieldprovider.ConfigurationFieldProvider.ConfigEditContext.base-model = Basismodell
