--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -1120,6 +1120,12 @@ com.top_logic.element.meta.form.fieldprovider.ComplexFieldProvider.Config.option
 com.top_logic.element.meta.form.fieldprovider.ComplexFieldProvider.Config.select-dialog = Select dialog
 com.top_logic.element.meta.form.fieldprovider.ComplexFieldProvider.Config.select-dialog.tooltip = Configuration for the select dialog (if it is used) of the result <i>select field</i>.
 com.top_logic.element.meta.form.fieldprovider.ComplexFieldProvider.tooltip = <i>Field provider</i> for <i>structured type parts</i> of custom data type.
+com.top_logic.element.meta.form.fieldprovider.CompositionFieldProvider$OpenDetailsCommand$Naming$Name = Detail of '{row}'
+com.top_logic.element.meta.form.fieldprovider.CompositionFieldProvider$OpenDetailsCommand$Naming$Name.tooltip = <i>Model name</i> identifying an <i>open details command</i>.
+com.top_logic.element.meta.form.fieldprovider.CompositionFieldProvider.OpenDetailsCommand.Naming.Name.row = Row
+com.top_logic.element.meta.form.fieldprovider.CompositionFieldProvider.OpenDetailsCommand.Naming.Name.row.tooltip = Name of the row for which the detail dialog is opened.
+com.top_logic.element.meta.form.fieldprovider.CompositionFieldProvider.OpenDetailsCommand.Naming.Name.table = Table
+com.top_logic.element.meta.form.fieldprovider.CompositionFieldProvider.OpenDetailsCommand.Naming.Name.table.tooltip = Name of the displayed table.
 com.top_logic.element.meta.form.fieldprovider.ConfigurationFieldProvider$ConfigEditContext = Configuration edit context
 com.top_logic.element.meta.form.fieldprovider.ConfigurationFieldProvider$ConfigEditContext.tooltip = Context for editing <i>configuration item</i> values in model attributes. <p> When an editor is built for a <i>configuration item</i> stored in a persistent object property, it is placed in a surrounding <i>configuration edit context</i> configuration with <i>Base model</i> being set to the edited instance. This allows to access this context from e.g. option providers declared for properties of the edited configuration. To use this feature, the <i>configuration item</i> type edited must extend <i>configuration part</i> and declare <i>configuration edit context</i> as its <i>container</i> property type. </p>
 com.top_logic.element.meta.form.fieldprovider.ConfigurationFieldProvider.ConfigEditContext.base-model = Base model
