Ticket #25918: Allow displaying connector symbols in tree layouts.

--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
@@ -26,6 +26,20 @@ com.top_logic.graphic.flow.data.Alignment.STOP.tooltip = Der Inhalt wird an der 
 com.top_logic.graphic.flow.data.Alignment.STRECH = Strech
 com.top_logic.graphic.flow.data.Alignment.STRECH.tooltip = Der Inhalt wird gestreckt, um sich der Größe des Containers anzupassen.
 com.top_logic.graphic.flow.data.Alignment.tooltip = Eine Ausrichtungsanweisung.
+com.top_logic.graphic.flow.data.ConnectorSymbol = Stecker-Symbol
+com.top_logic.graphic.flow.data.ConnectorSymbol.ARROW = Pfeil
+com.top_logic.graphic.flow.data.ConnectorSymbol.ARROW.tooltip = Ein offener Pfeil.
+com.top_logic.graphic.flow.data.ConnectorSymbol.CLOSED_ARROW = Geschlossener Pfeil
+com.top_logic.graphic.flow.data.ConnectorSymbol.CLOSED_ARROW.tooltip = Ein geschlossener (dreieckiger) Pfeil.
+com.top_logic.graphic.flow.data.ConnectorSymbol.DIAMOND = Diamant
+com.top_logic.graphic.flow.data.ConnectorSymbol.DIAMOND.tooltip = Ein Diamant.
+com.top_logic.graphic.flow.data.ConnectorSymbol.FILLED_ARROW = Gefüllter Pfeil
+com.top_logic.graphic.flow.data.ConnectorSymbol.FILLED_ARROW.tooltip = Ein ausgefüllter (dreieckiger) Pfeil.
+com.top_logic.graphic.flow.data.ConnectorSymbol.FILLED_DIAMOND = Gefüllter Diamant
+com.top_logic.graphic.flow.data.ConnectorSymbol.FILLED_DIAMOND.tooltip = Ein gefüllter Diamant.
+com.top_logic.graphic.flow.data.ConnectorSymbol.NONE = Keine
+com.top_logic.graphic.flow.data.ConnectorSymbol.NONE.tooltip = Anzeige ohne Steckersymbol.
+com.top_logic.graphic.flow.data.ConnectorSymbol.tooltip = Beschreibung der Steckersymbole.
 com.top_logic.graphic.flow.data.DiagramDirection = Diagramm Richtung
 com.top_logic.graphic.flow.data.DiagramDirection.BOTTOMUP = Bottomup
 com.top_logic.graphic.flow.data.DiagramDirection.BOTTOMUP.tooltip = Der Inhalt des Diagramms wird von unten nach oben angeordnet.
