--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
@@ -26,6 +26,20 @@ com.top_logic.graphic.flow.data.Alignment.STOP.tooltip = The content is aligned 
 com.top_logic.graphic.flow.data.Alignment.STRECH = Strech
 com.top_logic.graphic.flow.data.Alignment.STRECH.tooltip = The content is stretched to fit the size of the container.
 com.top_logic.graphic.flow.data.Alignment.tooltip = An alignment instruction.
+com.top_logic.graphic.flow.data.ConnectorSymbol = Connector symbol
+com.top_logic.graphic.flow.data.ConnectorSymbol.ARROW = Arrow
+com.top_logic.graphic.flow.data.ConnectorSymbol.ARROW.tooltip = An open arrow.
+com.top_logic.graphic.flow.data.ConnectorSymbol.CLOSED_ARROW = Closed arrow
+com.top_logic.graphic.flow.data.ConnectorSymbol.CLOSED_ARROW.tooltip = A closed (triangular) arrow.
+com.top_logic.graphic.flow.data.ConnectorSymbol.DIAMOND = Diamond
+com.top_logic.graphic.flow.data.ConnectorSymbol.DIAMOND.tooltip = A diamond.
+com.top_logic.graphic.flow.data.ConnectorSymbol.FILLED_ARROW = Filled arrow
+com.top_logic.graphic.flow.data.ConnectorSymbol.FILLED_ARROW.tooltip = A filled (triangular) arrow.
+com.top_logic.graphic.flow.data.ConnectorSymbol.FILLED_DIAMOND = Filled diamond
+com.top_logic.graphic.flow.data.ConnectorSymbol.FILLED_DIAMOND.tooltip = A filled diamond.
+com.top_logic.graphic.flow.data.ConnectorSymbol.NONE = None
+com.top_logic.graphic.flow.data.ConnectorSymbol.NONE.tooltip = Display no connector symbol.
+com.top_logic.graphic.flow.data.ConnectorSymbol.tooltip = Description of connector symbols.
 com.top_logic.graphic.flow.data.DiagramDirection = Diagram direction
 com.top_logic.graphic.flow.data.DiagramDirection.BOTTOMUP = Bottomup
 com.top_logic.graphic.flow.data.DiagramDirection.BOTTOMUP.tooltip = Diagram contents is layouted from bottom to top.
