--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -89,7 +89,7 @@ class.com.top_logic.knowledge.wrap.person.I18NConstants.CREATED_ROOT_ACCOUNT = R
 class.com.top_logic.knowledge.wrap.person.I18NConstants.RESETTING_ROOT_PASSWORD = Passworts für das Root-Konto zurückgesetzt.
 class.com.top_logic.knowledge.wrap.person.I18NConstants.STORED_PERSONAL_CONFIGURATION = Persönliche Konfiguration gespeichert.
 class.com.top_logic.knowledge.wrap.person.I18NConstants.UPDATED_ACCOUNT_LIST = Benutzerkonten aktualisiert.
-class.com.top_logic.layout.I18NConstants.ERROR_TARGET_CONTROL_NOT_FOUND__ID_CMD_ARGS = Zielsteuerung {0} nicht gefunden, liefert Befehlsargumente{1}": {2}
+class.com.top_logic.layout.I18NConstants.ERROR_TARGET_CONTROL_NOT_FOUND__ID_CMD_ARGS = Die Zielcontrol {0} wurde bei der Übermittlung des Befehls "{1}" mit den folgenden Argumenten nicht gefunden: {2}.
 class.com.top_logic.layout.admin.component.I18NConstants.ERROR_NOT_A_GROUP__ELEMENT = Das Objekt {0} ist keine Gruppe.
 class.com.top_logic.layout.basic.I18NConstants.ERROR_UPDATING_EXECUTABILITY__CMD_CMP_MSG = Die Ausführbarkeit des Befehls "{0}" in der Komponente "{1}" konnte nicht aktualisiert werden: {2}
 class.com.top_logic.layout.basic.I18NConstants.FAILED_TO_COMPUTE_STATE__MSG = Der Status der Ausführbarkeit konnte nicht berechnet werden: {0}
