Ticket #28604: Added configuration to exclude changes for some modules.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -156,6 +156,8 @@ com.top_logic.element.boundsec.manager.rule.config.RoleRulesConfig.tooltip = <i>
 com.top_logic.element.changelog.ChangeLogListModelBuilder = Änderungsprotokoll
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.all-users = Alle Benutzer
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.all-users.tooltip = Ob ein Änderungsprotokoll für alle Benutzer statt nur für den aktuell angemeldeten Benutzer erstellt werden soll.
+com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.excluded-modules = Ausgeschlossene Module
+com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.excluded-modules.tooltip = Die Module in dieser Liste werden nicht beachtet. D.h. für Elemente, deren Typ Teil eines dieser Module ist, werden keine Änderungen gemeldet.
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.include-technical-changes = Technische Änderungen einbeziehen
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.include-technical-changes.tooltip = Ob technische Änderungen aufgenommen werden sollen.
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.max-time = Maximale Zeit
