--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -156,6 +156,8 @@ com.top_logic.element.boundsec.manager.rule.config.RoleRulesConfig.tooltip = <i>
 com.top_logic.element.changelog.ChangeLogListModelBuilder = Change log list model builder
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.all-users = All users
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.all-users.tooltip = Whether to build a change log for all users instead only for the currently logged-in user.
+com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.excluded-modules = Excluded modules
+com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.excluded-modules.tooltip = Modules in this list are not observed. I.e. no changes are reported for elements whose type is part of one of this module.
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.include-technical-changes = Include technical changes
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.include-technical-changes.tooltip = Whether to include technical changes.
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.max-time = Maximum time
