--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -1,6 +1,7 @@
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECTS_NO_LONGER_EXIST__OBJ_PART_MISSING_MERGED = Die für die Eigenschaft "{1}" des Objekts "{0}" eingestellten Werte "{2}" sind nicht mehr verfügbar (inzwischen gelöscht), der Wert wird auf "{3}" gesetzt.
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECT_TO_CREATE_ALREADY_EXISTS__OBJ = Das Objekt, das erstellt werden soll, existiert bereits: {0}
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECT_TO_MODIFY_NO_LONGER_EXISTS__OBJ = Das Objekt, das geändert werden sollte, existiert nicht mehr: {0}
+class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_TYPE_FOR_OBJECT_TO_CREATE_NO_LONGE_EXISTS__OBJ_TYPE = Das Objekt "{0}" kann nicht erstellt werden, da sein Typ "{1}" nicht mehr verfügbar ist.
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_VALUE_CHANGED_IN_BETWEEN__OBJ_PART_ORIG_CURR_MERGED = Die Eigenschaft "{1}" des Objekts "{0}" wurde in der Zwischenzeit von ihrem ursprünglichen Wert "{2}" auf den neuen Wert "{3}" geändert, der Wert wird auf "{4}" gesetzt.
 class.com.top_logic.element.changelog.model.I18NConstants.REDO__MSG = Erneut durchgeführt: {0}
 class.com.top_logic.element.changelog.model.I18NConstants.REVERTED__MSG = Rückgängig gemacht: {0}
