--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -1,6 +1,7 @@
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECTS_NO_LONGER_EXIST__OBJ_PART_MISSING_MERGED = Values "{2}" set to the property "{1}" of object "{0}" are no longer available (deleted in the meantime), setting value to "{3}".
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECT_TO_CREATE_ALREADY_EXISTS__OBJ = The object that would be created already exists: {0}
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECT_TO_MODIFY_NO_LONGER_EXISTS__OBJ = The object that should be changed does no longer exist: {0}
+class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_TYPE_FOR_OBJECT_TO_CREATE_NO_LONGE_EXISTS__OBJ_TYPE = The object "{0}" can not created because its type "{1}" is no longer available.
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_VALUE_CHANGED_IN_BETWEEN__OBJ_PART_ORIG_CURR_MERGED = The property "{1}" of object "{0}" has been changed from its original value "{2}" to the new value "{3}" in the meantime, setting value to "{4}".
 class.com.top_logic.element.changelog.model.I18NConstants.REDO__MSG = Performed again: {0}
 class.com.top_logic.element.changelog.model.I18NConstants.REVERTED__MSG = Reverted change: {0}
