Ticket #28604: Added configuration to limit number of displayed entries.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -160,6 +160,8 @@ com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.excluded-module
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.excluded-modules.tooltip = Die Module in dieser Liste werden nicht beachtet. D.h. für Elemente, deren Typ Teil eines dieser Module ist, werden keine Änderungen gemeldet.
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.include-technical-changes = Technische Änderungen einbeziehen
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.include-technical-changes.tooltip = Ob technische Änderungen aufgenommen werden sollen.
+com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.max-entries = Anzahl Einträge
+com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.max-entries.tooltip = Der Wert gibt die maximale Anzahl der anzuzeigenden Einträge an. <p> Ein Wert von <code>&lt;= 0</code> bedeutet alle Einträge. </p>
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.max-time = Maximale Zeit
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.max-time.tooltip = Wie lange man in die Vergangenheit schauen kann. <p> Ein Wert von <code>0</code> bedeutet unbegrenzt. </p>
 com.top_logic.element.changelog.ChangeLogListModelBuilder.tooltip = <i>Erbauer eines Listenmodells</i> für eine Tabelle, die das Änderungsprotokoll der Anwendung anzeigt.
