--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -160,6 +160,8 @@ com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.excluded-module
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.excluded-modules.tooltip = Modules in this list are not observed. I.e. no changes are reported for elements whose type is part of one of this module.
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.include-technical-changes = Include technical changes
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.include-technical-changes.tooltip = Whether to include technical changes.
+com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.max-entries = Number entries
+com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.max-entries.tooltip = The value specifies the maximum number of entries to be displayed. <p> A value <code>&lt;= 0</code> means all entries. </p>
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.max-time = Maximum time
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.max-time.tooltip = How long to look into the past. <p> A value of <code>0</code> means unlimited. </p>
 com.top_logic.element.changelog.ChangeLogListModelBuilder.tooltip = <i>List model builder</i> for a table that displays the application's change log.
