Ticket #28876: Made `logoutPage` optional.
* Clarified the semantics of the `logoutPage` option.
* Fixed misuse of that option and added the "real" logout page as
`triggerLogoutPage` option.

--- a/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_de.properties
+++ b/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_de.properties
@@ -4047,7 +4047,7 @@ tl.login.password = Passwort
 tl.login.username = Name
 tl.logout = Abmelden
 tl.logout.message0 = Sie wurden vom System abgemeldet.
-tl.logout.message1 = Sollten Sie nicht automatisch weitergeleitet werden, klicken Sie untenstehenden Link für eine erneute Anmeldung.
+tl.logout.message1 = Klicken Sie untenstehenden Knopf für eine erneute Anmeldung oder schließen Sie das Fenster.
 tl.logout.message2 = Erneut anmelden
 tl.mail.attachments = Anlagen
 tl.mail.content = Inhalt
