Ticket #28876: Made `logoutPage` optional.
* Clarified the semantics of the `logoutPage` option.
* Fixed misuse of that option and added the "real" logout page as
`triggerLogoutPage` option.

--- a/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_en.properties
+++ b/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_en.properties
@@ -4046,7 +4046,7 @@ tl.login.password = Password
 tl.login.username = Name
 tl.logout = Logout
 tl.logout.message0 = You have been logged off from the System.
-tl.logout.message1 = If you are not redirected automatically, click on the link below to log in again.
+tl.logout.message1 = Click the button below to log in again, or close the window.
 tl.logout.message2 = Log in
 tl.mail.attachments = Attachments
 tl.mail.content = Content
