--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -298,11 +298,13 @@ com.top_logic.base.accesscontrol.ApplicationPages.Config.loginRetryPage.tooltip 
 com.top_logic.base.accesscontrol.ApplicationPages.Config.loginRetrySSO = Login-Wiederholungsversuch SSO
 com.top_logic.base.accesscontrol.ApplicationPages.Config.loginRetrySSO.tooltip = Konfigurationsoption, die das Suffix für den Anwendungskontextpfad festlegt, zu dem als Reaktion auf ein Fehlschlagen der Single-Sign-on-Authentifizierung umgeleitet werden soll.
 com.top_logic.base.accesscontrol.ApplicationPages.Config.logoutPage = Logout-Seite
-com.top_logic.base.accesscontrol.ApplicationPages.Config.logoutPage.tooltip = Konfigurationsoption, die das Suffix für den Anwendungskontextpfad bestimmt, zu dem umgeleitet werden soll, um eine Abmeldung auszulösen.
+com.top_logic.base.accesscontrol.ApplicationPages.Config.logoutPage.tooltip = Anwendungspfad, an den der Benutzer nach einer Abmeldung weitergeleitet wird. <p> Wenn der Wert leer ist, wird die <i>Abmeldeseite</i> permanent angezeigt, bis der Benutzer entscheidet, was er als Nächstes tun möchte. </p>
 com.top_logic.base.accesscontrol.ApplicationPages.Config.noCookiePage = Keine Cookie-Seite
 com.top_logic.base.accesscontrol.ApplicationPages.Config.noCookiePage.tooltip = Konfigurationsoption, die das Suffix zum Anwendungskontextpfad bestimmt, zu dem umgeleitet werden soll, wenn im Browser fehlende Cookie-Unterstützung erkannt wird.
 com.top_logic.base.accesscontrol.ApplicationPages.Config.startPage = Startseite
 com.top_logic.base.accesscontrol.ApplicationPages.Config.startPage.tooltip = Konfigurationsoption, die das Suffix des Anwendungskontextpfades bestimmt, zu dem nach erfolgreicher Anmeldung umgeleitet werden soll.
+com.top_logic.base.accesscontrol.ApplicationPages.Config.triggerLogoutPage = Logout einleiten
+com.top_logic.base.accesscontrol.ApplicationPages.Config.triggerLogoutPage.tooltip = Anwendungspfad, der eine Abmeldung auslöst.
 com.top_logic.base.accesscontrol.ExternalAuthentication = Externe Authentifizierung
 com.top_logic.base.accesscontrol.ExternalAuthentication.isEnabled = Ist aktiviert
 com.top_logic.base.accesscontrol.ExternalAuthentication.reuseSession = Sitzung zur Wiederverwendung
