--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -227,11 +227,13 @@ com.top_logic.base.accesscontrol.ApplicationPages.Config.loginRetryPage.tooltip 
 com.top_logic.base.accesscontrol.ApplicationPages.Config.loginRetrySSO = Login retry SSO
 com.top_logic.base.accesscontrol.ApplicationPages.Config.loginRetrySSO.tooltip = Configuration option that determines the suffix to the applications context path to which should be redirected in response to an single-sign-on authentication failure.
 com.top_logic.base.accesscontrol.ApplicationPages.Config.logoutPage = Logout page
-com.top_logic.base.accesscontrol.ApplicationPages.Config.logoutPage.tooltip = Configuration option that determines the suffix to the applications context path to which should be redirected to trigger a logout.
+com.top_logic.base.accesscontrol.ApplicationPages.Config.logoutPage.tooltip = Application path to with the user is forwarded after a logout. <p> If the value is empty, the <i>Trigger logout page</i> is displayed permanently until the user decides what to do next. </p>
 com.top_logic.base.accesscontrol.ApplicationPages.Config.noCookiePage = No cookie page
 com.top_logic.base.accesscontrol.ApplicationPages.Config.noCookiePage.tooltip = Configuration option that determines the suffix to the applications context path to which should be redirected if missing cookie support is detected in the browser.
 com.top_logic.base.accesscontrol.ApplicationPages.Config.startPage = Start page
 com.top_logic.base.accesscontrol.ApplicationPages.Config.startPage.tooltip = Configuration option that determines the suffix to the applications context path to which should be redirected after a successful login.
+com.top_logic.base.accesscontrol.ApplicationPages.Config.triggerLogoutPage = Trigger logout page
+com.top_logic.base.accesscontrol.ApplicationPages.Config.triggerLogoutPage.tooltip = Application path that triggers a logout.
 com.top_logic.base.accesscontrol.ExternalAuthentication = External authentication
 com.top_logic.base.accesscontrol.ExternalAuthentication.isEnabled = Is enabled
 com.top_logic.base.accesscontrol.ExternalAuthentication.reuseSession = Reuse session
