Ticket #25918: Added missing I18N.

--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
@@ -104,6 +104,26 @@ com.top_logic.graphic.flow.data.MouseButton.MIDDLE.tooltip = The middle mouse bu
 com.top_logic.graphic.flow.data.MouseButton.RIGHT = Right
 com.top_logic.graphic.flow.data.MouseButton.RIGHT.tooltip = The right mouse button.
 com.top_logic.graphic.flow.data.MouseButton.tooltip = Mouse buttons that can be used to interact with diagram elements.
+com.top_logic.graphic.flow.data.OffsetPosition = Offset position
+com.top_logic.graphic.flow.data.OffsetPosition.BOTTOM_LEFT = Bottom left
+com.top_logic.graphic.flow.data.OffsetPosition.BOTTOM_LEFT.tooltip = The bottom left corner.
+com.top_logic.graphic.flow.data.OffsetPosition.BOTTOM_RIGHT = Bottom right
+com.top_logic.graphic.flow.data.OffsetPosition.BOTTOM_RIGHT.tooltip = The bottom right corner.
+com.top_logic.graphic.flow.data.OffsetPosition.CENTER = Center
+com.top_logic.graphic.flow.data.OffsetPosition.CENTER.tooltip = The center of the box.
+com.top_logic.graphic.flow.data.OffsetPosition.CENTER_BOTTOM = Center bottom
+com.top_logic.graphic.flow.data.OffsetPosition.CENTER_BOTTOM.tooltip = The center of the bottom border.
+com.top_logic.graphic.flow.data.OffsetPosition.CENTER_LEFT = Center left
+com.top_logic.graphic.flow.data.OffsetPosition.CENTER_LEFT.tooltip = The center of the left border.
+com.top_logic.graphic.flow.data.OffsetPosition.CENTER_RIGHT = Center right
+com.top_logic.graphic.flow.data.OffsetPosition.CENTER_RIGHT.tooltip = The center of the right border.
+com.top_logic.graphic.flow.data.OffsetPosition.CENTER_TOP = Center top
+com.top_logic.graphic.flow.data.OffsetPosition.CENTER_TOP.tooltip = The center of the top border.
+com.top_logic.graphic.flow.data.OffsetPosition.TOP_LEFT = Top left
+com.top_logic.graphic.flow.data.OffsetPosition.TOP_LEFT.tooltip = The top left corner.
+com.top_logic.graphic.flow.data.OffsetPosition.TOP_RIGHT = Top right
+com.top_logic.graphic.flow.data.OffsetPosition.TOP_RIGHT.tooltip = The top right corner.
+com.top_logic.graphic.flow.data.OffsetPosition.tooltip = A position specification of a canonical point within a box.
 com.top_logic.graphic.flow.data.SpaceDistribution = Space distribution
 com.top_logic.graphic.flow.data.SpaceDistribution.NONE = None
 com.top_logic.graphic.flow.data.SpaceDistribution.NONE.tooltip = Do not use extra space, allow to <i>align</i> the row within its container.
@@ -130,6 +150,8 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.DIAGRAM = Diagram
 com.top_logic.graphic.flow.data.Widget.TypeKind.DIAGRAM.tooltip = Type literal for <i>diagram</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.DROP_REGION = Drop region
 com.top_logic.graphic.flow.data.Widget.TypeKind.DROP_REGION.tooltip = Type literal for <i>drop region</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.EDGE_DECORATION = Edge decoration
+com.top_logic.graphic.flow.data.Widget.TypeKind.EDGE_DECORATION.tooltip = Type literal for <i>edge decoration</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.EMPTY = Empty
 com.top_logic.graphic.flow.data.Widget.TypeKind.EMPTY.tooltip = Type literal for <i>empty</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.FILL = Fill
