--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
@@ -104,6 +104,26 @@ com.top_logic.graphic.flow.data.MouseButton.MIDDLE.tooltip = Die mittlere Mausta
 com.top_logic.graphic.flow.data.MouseButton.RIGHT = Rechts
 com.top_logic.graphic.flow.data.MouseButton.RIGHT.tooltip = Die rechte Maustaste.
 com.top_logic.graphic.flow.data.MouseButton.tooltip = Maustasten, die zur Interaktion mit Diagrammelementen verwendet werden können.
+com.top_logic.graphic.flow.data.OffsetPosition = Versetzte Position
+com.top_logic.graphic.flow.data.OffsetPosition.BOTTOM_LEFT = Unten links
+com.top_logic.graphic.flow.data.OffsetPosition.BOTTOM_LEFT.tooltip = Die linke untere Ecke.
+com.top_logic.graphic.flow.data.OffsetPosition.BOTTOM_RIGHT = Unten rechts
+com.top_logic.graphic.flow.data.OffsetPosition.BOTTOM_RIGHT.tooltip = Die rechte untere Ecke.
+com.top_logic.graphic.flow.data.OffsetPosition.CENTER = Zentrum
+com.top_logic.graphic.flow.data.OffsetPosition.CENTER.tooltip = Die Mitte der Box.
+com.top_logic.graphic.flow.data.OffsetPosition.CENTER_BOTTOM = Mitte unten
+com.top_logic.graphic.flow.data.OffsetPosition.CENTER_BOTTOM.tooltip = Die Mitte des unteren Randes.
+com.top_logic.graphic.flow.data.OffsetPosition.CENTER_LEFT = Mitte links
+com.top_logic.graphic.flow.data.OffsetPosition.CENTER_LEFT.tooltip = Die Mitte des linken Randes.
+com.top_logic.graphic.flow.data.OffsetPosition.CENTER_RIGHT = Mitte rechts
+com.top_logic.graphic.flow.data.OffsetPosition.CENTER_RIGHT.tooltip = Die Mitte des rechten Randes.
+com.top_logic.graphic.flow.data.OffsetPosition.CENTER_TOP = Mitte oben
+com.top_logic.graphic.flow.data.OffsetPosition.CENTER_TOP.tooltip = Die Mitte des oberen Randes.
+com.top_logic.graphic.flow.data.OffsetPosition.TOP_LEFT = Oben links
+com.top_logic.graphic.flow.data.OffsetPosition.TOP_LEFT.tooltip = Die linke obere Ecke.
+com.top_logic.graphic.flow.data.OffsetPosition.TOP_RIGHT = Oben rechts
+com.top_logic.graphic.flow.data.OffsetPosition.TOP_RIGHT.tooltip = Die rechte obere Ecke.
+com.top_logic.graphic.flow.data.OffsetPosition.tooltip = Eine Positionsangabe eines kanonischen Punktes innerhalb einer Box.
 com.top_logic.graphic.flow.data.SpaceDistribution = Raumverteilung
 com.top_logic.graphic.flow.data.SpaceDistribution.NONE = Keine
 com.top_logic.graphic.flow.data.SpaceDistribution.NONE.tooltip = Verwenden Sie keinen zusätzlichen Platz, sondern <i>richten Sie</i> die Zeile innerhalb ihres Containers aus.
@@ -130,6 +150,8 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.DIAGRAM = Diagramm
 com.top_logic.graphic.flow.data.Widget.TypeKind.DIAGRAM.tooltip = Type literal für <i>Diagramm</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.DROP_REGION = Region fallen lassen
 com.top_logic.graphic.flow.data.Widget.TypeKind.DROP_REGION.tooltip = Typ Literal für <i>Drop Region</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.EDGE_DECORATION = Randverzierung
+com.top_logic.graphic.flow.data.Widget.TypeKind.EDGE_DECORATION.tooltip = Typ wörtlich für die <i>Randverzierung</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.EMPTY = Leere
 com.top_logic.graphic.flow.data.Widget.TypeKind.EMPTY.tooltip = Typ literal für <i>leer</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.FILL = Füllen Sie
