Ticket #25918: Added missing I18N.

--- a/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_de.properties
@@ -1,10 +1,6 @@
 class.com.top_logic.graphic.flow.server.script.I18NConstants.ERROR_WRONG_ARGUMENT__FUN_ARG_EXPECTED_VAL = Falsches Argument für Parameter{1}" der Funktion{0}", erwartet wird ein Wert vom Typ{2}" Wert war: {3}
 com.top_logic.graphic.blocks.server.component.BlocksComponent = Blocks Komponente
 com.top_logic.graphic.blocks.server.component.BlocksComponent.tooltip = <i>Komponente</i>, die ein <i>Blockmodell</i> anzeigt.
-com.top_logic.graphic.flow.server.script.JavaScriptMethod$Builder = Erbauer
-com.top_logic.graphic.flow.server.script.JavaScriptMethod$Builder.tooltip = Erbauer der <i>Java-Scriptmethode</i>.
-com.top_logic.graphic.flow.server.script.JavaScriptMethod.Builder.Config.method = Methode
-com.top_logic.graphic.flow.server.script.JavaScriptMethod.Builder.Config.method.tooltip = Qualifizierter Name der aufzurufenden statischen Methode in der Form <code>fully.qualified.ClassName#methodName</code>
 com.top_logic.graphic.flow.server.script.ScriptConversion = Skript-Konvertierung
 com.top_logic.graphic.flow.server.script.ScriptConversion.tooltip = Annotation zum Hinzufügen eines <i>Wertkonverters</i> zu einem Methodenparameter.
 com.top_logic.graphic.flow.server.script.ScriptConversion.value = Wert
@@ -13,6 +9,10 @@ com.top_logic.graphic.flow.server.script.SideEffectFree = Frei von Nebenwirkunge
 com.top_logic.graphic.flow.server.script.SideEffectFree.canEvaluateAtCompileTime = Kann zur Kompilierzeit ausgewertet werden
 com.top_logic.graphic.flow.server.script.SideEffectFree.canEvaluateAtCompileTime.tooltip = Zu setzendes Flag, um die Konstantenfaltung durch den TL-Script-Compiler zu ermöglichen. <p> Wenn es auf <code>true</code> gesetzt ist, kann die Methode zur Kompilierzeit aufgerufen werden, wenn alle Argumente Konstanten sind. </p>
 com.top_logic.graphic.flow.server.script.SideEffectFree.tooltip = Annotation für eine Java-Methode, die von TL-Script aus aufgerufen werden kann, wenn die Methode keine Seiteneffekte hat.
+com.top_logic.graphic.flow.server.script.TLScriptMethod$Builder = Erbauer
+com.top_logic.graphic.flow.server.script.TLScriptMethod$Builder.tooltip = Erbauer der <i>Skriptmethode</i>.
+com.top_logic.graphic.flow.server.script.TLScriptMethod.Builder.Config.method = Methode
+com.top_logic.graphic.flow.server.script.TLScriptMethod.Builder.Config.method.tooltip = Qualifizierter Name der aufzurufenden statischen Methode in der Form <code>fully.qualified.ClassName#methodName</code>
 com.top_logic.graphic.flow.server.ui.FlowChartComponent = Komponente Flussdiagramm
 com.top_logic.graphic.flow.server.ui.FlowChartComponent.Config.context-menu-factory = Kontextmenü
 com.top_logic.graphic.flow.server.ui.FlowChartComponent.Config.context-menu-factory.tooltip = Logik für das Kontextmenü des Diagrammelementes.
